Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9877

[C++][CI] homebrew-cpp fails due to avx512

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0
    • C++

    Description

      This has been failing for a couple of days now. See e.g. https://travis-ci.org/github/ursa-labs/crossbow/builds/721587052#L9183

      In file included from /tmp/apache-arrow-20200827-98957-1ebvdk8/cpp/src/arrow/util/bpacking_avx512.cc:19:
      /tmp/apache-arrow-20200827-98957-1ebvdk8/cpp/src/arrow/util/bpacking_avx512_generated.h:46:15: error: always_inline function '_mm512_set1_epi32' requires target feature 'avx512f', but would be inlined into function 'unpack1_32_avx512' that is compiled without support for 'avx512f'
        reg_masks = _mm512_set1_epi32(mask);
                    ^
      

      Could be caused by ARROW-9702?

      Attachments

        Issue Links

          Activity

            People

              frank.du Frank Du
              npr Neal Richardson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 50m
                  2h 50m

                  Slack

                    Issue deployment