ARROW-9877: [C++] Fix homebrew-cpp build fail on AVX512

Apple Clang cannot unzip "-march=skylake-avx512" exactly.
Also fix AVX512 detect to include AVX512F,AVX512BW,AVX512VL,AVX512CD,AVX512DQ

Signed-off-by: Frank Du <frank.du@intel.com>