cpp/cmake_modules/SetupCxxFlags.cmake
@@ -47,8 +47,8 @@ if(ARROW_CPU_FLAG STREQUAL "x86")
   else()
     set(ARROW_SSE4_2_FLAG "-msse4.2")
     set(ARROW_AVX2_FLAG "-mavx2")
-    # skylake-avx512 consists of AVX512F,AVX512BW,AVX512VL,AVX512CD,AVX512DQ
-    set(ARROW_AVX512_FLAG "-march=skylake-avx512 -mbmi2")
+    # Typical AVX512 subsets consists of AVX512F, AVX512BW, AVX512VL, AVX512CD, AVX512DQ
+    set(ARROW_AVX512_FLAG "-mavx512f -mavx512cd -mavx512vl -mavx512dq -mavx512bw -mbmi2")
     check_cxx_compiler_flag(${ARROW_SSE4_2_FLAG} CXX_SUPPORTS_SSE4_2)
   endif()
   check_cxx_compiler_flag(${ARROW_AVX2_FLAG} CXX_SUPPORTS_AVX2)
